# celery-lesson

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: build_server.py  fizzbuzz.py  tasks.py
