[tool.poetry]
name = "celery-lesson"
version = "0.1.0"
description = ""
authors = ["k4ssyi <kasikasi00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "^4.4.6"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
bpython = "^0.19"
pudb = "^2019.2"
ipdb = "^0.13.3"
black = "^19.10b0"
isort = "^5.2.2"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
